--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -1,5 +1,63 @@
 <!doctype html>
 <html lang="en-US" prefix="og: https://ogp.me/ns#">
-	<title class=title>ft_transcendence</title>
-	<h1>YO GUYS</h1>
+	<title>
+		The Great Avocado War of '24
+	</title>
+	<body>
+		<head>
+			<script src="ft_transcendence.js">
+			</script>
+			<link rel="stylesheet" href="ft_transcendence.css" />
+		</head>
+		<div class=navbar>
+			<div class=logo>
+				<div class=title>
+					The Great Avocado War of '24
+				</div>
+				<div class=subtitle>
+					<i>
+						An ft_transcendence production.
+					</i>
+				</div>
+			</div>
+			<div class=navbar-content>
+				<a>
+					Home
+				</a>
+				<a>
+					Leaderboard
+				</a>
+				<a class="Login" onclick="openForm()">
+					Log in
+				</button>
+				<a>
+					About
+				</a>
+			</div>
+		</div>
+		<div class="form-popup" id="myForm">
+			<form action="/action_page.php" class="form-container">
+				<h1>
+					Login
+				</h1>
+				<label for="email">
+					<b>
+						Email
+					</b>
+				</label>
+				<input type="text" placeholder="Enter Email" name="email" required>
+				<label for="psw">
+					<b>
+						Password
+					</b>
+				</label>
+				<input type="password" placeholder="Enter Password" name="psw" required>
+				<button type="button" class="btn">
+					Login
+				</button>
+				<button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+			</form>
+		</div>
+	</body>
 </html>
+
