--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -40,12 +40,12 @@
 				<h1>
 					Login
 				</h1>
-				<label for="email">
+				<label for="username">
 					<b>
-						Email
+						Username
 					</b>
 				</label>
-				<input type="text" placeholder="Enter Email" name="email" required>
+				<input type="text" placeholder="Enter Username" name="username" required>
 				<label for="psw">
 					<b>
 						Password
