SIngle page application (navigation bar + game)

--- a/frontend/-/menu/index.html
+++ b/frontend/-/menu/index.html
@@ -16,7 +16,7 @@
         <ul class="nav-links" id="nav-links">
             <li><a href="#Home">Home</a></li>
             <li><a href="#About">About</a></li>
-            <li><a href="#Login">Login</a></li>
+            <li><a href="#Signin">Sign in</a></li>
             <li><a href="#Signup">Sign up</a></li>
         </ul>
     </nav>
