--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -35,7 +35,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="content">
+		<div class="content" id="content" onclick="openHome()">
 		</div>
 		<div class="form-popup" id="login">
 			<form class="form-container">
@@ -57,7 +57,9 @@
 				<button type="button" class="btn">
 					Login
 				</button>
-				<button type="button" class="btn cancel" onclick="openLogin()">Close</button>
+				<button type="button" class="btn cancel" onclick="openLogin()">
+					Close
+				</button>
 			</form>
 		</div>
 		<div class="about-popup" id="about">
