--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -36,6 +36,9 @@
 			</div>
 		</div>
 		<div class="content" id="content" onclick="openHome()">
+			<div class="content-body">
+				BONJOUR TOUT LE MONDE
+			</div>
 		</div>
 		<div class="form-popup" id="login">
 			<form class="form-container">
