--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 		<div class="content" id="content" onclick="openHome()">
-			<div class="content-body">
+			<div class="content-body" id="content-body">
 				BONJOUR TOUT LE MONDE
 			</div>
 		</div>
