--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -37,11 +37,10 @@
 		</div>
 		<div class="content" id="content" onclick="openHome()">
 			<div class="content-body" id="content-body">
-				BONJOUR TOUT LE MONDE
 			</div>
 		</div>
-		<div class="form-popup" id="login">
-			<form class="form-container">
+		<div class="login-popup" id="login">
+			<form class="login-container">
 				<h1>
 					Login
 				</h1>
@@ -60,7 +59,7 @@
 				<button type="button" class="btn">
 					Login
 				</button>
-				<button type="button" class="btn cancel" onclick="openLogin()">
+				<button type="button" class="btn cancel" onclick="openHome()">
 					Close
 				</button>
 			</form>
