make logo clickable

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -11,10 +11,10 @@
 		</head>
 		<div class=navbar>
 			<div class=logo>
-				<div class=title>
+				<div class=title onclick="openHome()">
 					The Great Avocado War of '24
 				</div>
-				<div class=subtitle>
+				<div class=subtitle onclick="openHome()">
 					<i>
 						An ft_transcendence production.
 					</i>
@@ -69,7 +69,7 @@
 				<h1>
 					About the Great Avocado War of '24
 				</h1>
-				<div>
+				<div class="about-blurb">
 					On February 30th 2024, something happened that would forever change the course of history. Tired of being treated as little more than food, the avocados waged war against the animal kingdom as a whole.<br>
 					<br>
 					At first, the war went well for the avocados and they made short work of the weak human forces. With the humans out of the picture, the avocados thought they had won the war.<br>
@@ -80,6 +80,9 @@
 					</br>
 					This website exists to serve as an accurate retelling of the Great Avocado War of '24. As for who won the war? You will have to play to find out.
 				</div>
+				<button type="button" class="btn cancel" onclick="openHome()">
+					Close
+				</button>
 			</div>
 		</div>
 	</body>
