improve UI a bunch

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -39,23 +39,50 @@
 			<div class="content-body" id="content-body">
 			</div>
 		</div>
-		<div class="login-popup" id="login">
-			<form class="login-container">
-				<h2 style="margin: 4px">
-					Login
+		<div class="popup" id="about">
+			<div class="container">
+				<h2 class="popup-label">
+					The Great Avocado War of '24
+				</h2>
+				<div class="frame">
+					<div class="about-blurb">
+						On February 30th 2024, something happened that would forever change the course of history. Tired of being treated as little more than food, the avocados waged war against the animal kingdom as a whole.<br>
+						<br>
+						At first, the war went well for the avocados and they made short work of the weak human forces. With the humans out of the picture, the avocados thought they had won the war.<br>
+						<br>
+						They were wrong.<br>
+						<br>
+						They were not prepared for the onslaught from the pangolins. The pangolins were ruthless. The avocados found themselves evenly matched.<br>
+						</br>
+						This website exists to serve as an accurate retelling of the Great Avocado War of '24. As for who won the war? You will have to play to find out.
+					</div>
+				</div>
+				<div class="row">
+					<button type="button" class="btn cancel" onclick="openHome()">
+						Close
+					</button>
+				</div>
+			</div>
+		</div>
+		<div class="popup" id="login">
+			<div class="container">
+				<h2 class="popup-label">
+					Log in
 				</h2>
 				<div class="frame">
 					<div class="row">
-						<label class="label">
-							Username:
-						</label>
-						<input type="text">
-					</div>
-					<div class="row">
-						<label class="label">
-							Password:
-						</label>
-						<input type="password">
+						<div class="column">
+							<label class="label">
+								Username:
+							</label>
+							<label class="label">
+								Password:
+							</label>
+						</div>
+						<div class="column">
+							<input type="text">
+							<input type="password">
+						</div>
 					</div>
 				</div>
 				<div class="row">
@@ -65,28 +92,45 @@
 					<button type="button" class="btn">
 						OK
 					</button>
+					<button type="button" class="btn" onclick="openSignup()">
+						Sign up
+					</button>
 				</div>
-			</form>
+			</div>
 		</div>
-		<div class="about-popup" id="about">
-			<div class="about-container">
-				<h1>
-					About the Great Avocado War of '24
-				</h1>
-				<div class="about-blurb">
-					On February 30th 2024, something happened that would forever change the course of history. Tired of being treated as little more than food, the avocados waged war against the animal kingdom as a whole.<br>
-					<br>
-					At first, the war went well for the avocados and they made short work of the weak human forces. With the humans out of the picture, the avocados thought they had won the war.<br>
-					<br>
-					They were wrong.<br>
-					<br>
-					They were not prepared for the onslaught from the pangolins. The pangolins were ruthless. The avocados found themselves evenly matched.<br>
-					</br>
-					This website exists to serve as an accurate retelling of the Great Avocado War of '24. As for who won the war? You will have to play to find out.
+		<div class="popup" id="signup">
+			<div class="container">
+				<h2 class="popup-label">
+					Sign up
+				</h2>
+				<div class="frame">
+					<div class="row">
+						<div class="column">
+							<label class="label">
+								Username:
+							</label>
+							<label class="label">
+								Password:
+							</label>
+							<label class="label">
+								Confirm password:
+							</label>
+						</div>
+						<div class="column">
+							<input type="text">
+							<input type="password">
+							<input type="password">
+						</div>
+					</div>
 				</div>
-				<button type="button" class="btn cancel" onclick="openHome()">
-					Close
-				</button>
+				<div class="row">
+					<button type="button" class="btn" onclick="openLogin()">
+						Cancel
+					</button>
+					<button type="button" class="btn">
+						OK
+					</button>
+				</div>
 			</div>
 		</div>
 	</body>
