add icons to buttons

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -58,8 +58,13 @@
 					</div>
 				</div>
 				<div class="row">
+					<div class="spacer">
+					</div>
 					<button type="button" class="btn cancel" onclick="openHome()">
-						Close
+						<img class="icon" src="icons/window-close.svg">
+						<div class="label">
+							Close
+						</div>
 					</button>
 				</div>
 			</div>
@@ -72,12 +77,12 @@
 				<div class="frame">
 					<div class="row">
 						<div class="column">
-							<label class="label">
+							<div class="label">
 								Username:
-							</label>
-							<label class="label">
+							</div>
+							<div class="label">
 								Password:
-							</label>
+							</div>
 						</div>
 						<div class="column">
 							<input type="text">
@@ -86,14 +91,24 @@
 					</div>
 				</div>
 				<div class="row">
+					<button type="button" class="btn" onclick="openSignup()">
+						<div class="label">
+							Sign up
+						</div>
+					</button>
+					<div class="spacer">
+					</div>
 					<button type="button" class="btn" onclick="openHome()">
-						Cancel
+						<img class="icon" src="icons/dialog-cancel.svg">
+						<div class="label">
+							Cancel
+						</div>
 					</button>
 					<button type="button" class="btn">
-						OK
-					</button>
-					<button type="button" class="btn" onclick="openSignup()">
-						Sign up
+						<img class="icon" src="icons/dialog-ok-apply.svg">
+						<div class="label">
+							OK
+						</div>
 					</button>
 				</div>
 			</div>
@@ -106,15 +121,15 @@
 				<div class="frame">
 					<div class="row">
 						<div class="column">
-							<label class="label">
+							<div class="label">
 								Username:
-							</label>
-							<label class="label">
+							</div>
+							<div class="label">
 								Password:
-							</label>
-							<label class="label">
+							</div>
+							<div class="label">
 								Confirm password:
-							</label>
+							</div>
 						</div>
 						<div class="column">
 							<input type="text">
@@ -124,11 +139,19 @@
 					</div>
 				</div>
 				<div class="row">
+					<div class="spacer">
+					</div>
 					<button type="button" class="btn" onclick="openLogin()">
-						Cancel
+						<img class="icon" src="icons/dialog-cancel.svg">
+						<div class="label">
+							Cancel
+						</div>
 					</button>
 					<button type="button" class="btn">
-						OK
+						<img class="icon" src="icons/dialog-ok-apply.svg">
+						<div class="label">
+							OK
+						</div>
 					</button>
 				</div>
 			</div>
