minor css fixes

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -40,8 +40,7 @@
 			</div>
 		</div>
 		<div class="content" id="content" onclick="openHome()">
-			<div class="content-body" id="content-body">
-			</div>
+			<img class="content-body" id="content-body" src="icons/placeholder.png">
 		</div>
 		<div class="popup" id="about">
 			<div class="container">
@@ -85,7 +84,7 @@
 							Database
 						</i>
 						<br>
-						<button type="button" class="borderless-button" id="about-button" onclick="openAbout()" title="Visit contributor's homepage&#013;https://github.com/Nyonyx">
+						<button type="button" class="borderless-button" title="Visit contributor's homepage&#013;https://github.com/Nyonyx">
 							<a href="https://github.com/Nyonyx" target="_blank">
 								<img class="icon" src="icons/globe.svg">
 							</a>
@@ -98,8 +97,21 @@
 							Game
 						</i>
 						<br>
-						<button type="button" class="borderless-button" id="about-button" onclick="openAbout()" title="Visit contributor's homepage&#013;https://github.com/ShroomySquid">
+						<button type="button" class="borderless-button" title="Visit contributor's homepage&#013;https://github.com/ShroomySquid">
 							<a href="https://github.com/ShroomySquid" target="_blank">
+								<img class="icon" src="icons/globe.svg">
+							</a>
+						</button>
+						<b>
+							 George Zhukov
+						</b>
+						<br>
+						<i>
+							3D Rendering
+						</i>
+						<br>
+						<button type="button" class="borderless-button" title="Visit contributor's homepage&#013;https://github.com/joeroeg">
+							<a href="https://github.com/joeroeg" target="_blank">
 								<img class="icon" src="icons/globe.svg">
 							</a>
 						</button>
@@ -111,7 +123,7 @@
 							Interface
 						</i>
 						<br>
-						<button type="button" class="borderless-button" id="about-button" onclick="openAbout()" title="Visit contributor's homepage&#013;https://github.com/lcouturi">
+						<button type="button" class="borderless-button" title="Visit contributor's homepage&#013;https://github.com/lcouturi">
 							<a href="https://github.com/lcouturi" target="_blank">
 								<img class="icon" src="icons/globe.svg">
 							</a>
@@ -124,21 +136,8 @@
 							Backend
 						</i>
 						<br>
-						<button type="button" class="borderless-button" id="about-button" onclick="openAbout()" title="Visit contributor's homepage&#013;https://github.com/pierreolivierpaquet">
+						<button type="button" class="borderless-button" title="Visit contributor's homepage&#013;https://github.com/pierreolivierpaquet">
 							<a href="https://github.com/pierreolivierpaquet" target="_blank">
-								<img class="icon" src="icons/globe.svg">
-							</a>
-						</button>
-						<b>
-							 George Zhukov
-						</b>
-						<br>
-						<i>
-							3D Rendering
-						</i>
-						<br>
-						<button type="button" class="borderless-button" id="about-button" onclick="openAbout()" title="Visit contributor's homepage&#013;https://github.com/joeroeg">
-							<a href="https://github.com/joeroeg" target="_blank">
 								<img class="icon" src="icons/globe.svg">
 							</a>
 						</button>
