use better image

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -58,7 +58,7 @@
 					</div>
 					<div class="tab-body active" id="tab-body1">
 						<div class="row">
-							<img class="inline-img" src="icons/Avocado_Coder.png">
+							<img class="inline-img" src="icons/openart-image_yBIl3nIg_1717776713014_raw.jpg">
 						</div>
 						<br>
 						On February 30th 2024, something happened that would forever change the course of history. Tired of being treated as little more than food, the avocados waged war against the animal kingdom as a whole.
