add tooltips to toolbar

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -11,19 +11,19 @@
 		</head>
 		<div class="toolbar" id="toolbar">
 			<div class="toolbar-content">
-				<button type="button" class="borderless-button" id="home-button" onclick="openHome()" style="border-color: #bbbcbd; background-color: #c5c9cb">
+				<button type="button" class="borderless-button" id="home-button" onclick="openHome()" style="border-color: #bbbcbd; background-color: #c5c9cb" title="Home">
 					<img class="icon" src="icons/go-home.svg">
 					<div class="label">
 						Home
 					</div>
 				</button>
-				<button type="button" class="borderless-button">
+				<button type="button" class="borderless-button" title="Leaderboard">
 					<img class="icon" src="icons/games-highscores.svg">
 					<div class="label">
 						Leaderboard
 					</div>
 				</button>
-				<button type="button" class="borderless-button" id="about-button" onclick="openAbout()">
+				<button type="button" class="borderless-button" id="about-button" onclick="openAbout()" title="About">
 					<img class="icon" src="icons/help-about.svg">
 					<div class="label">
 						About
@@ -31,7 +31,7 @@
 				</button>
 				<div class="spacer">
 				</div>
-				<button type="button" class="borderless-button" id="login-button" onclick="openLogin()">
+				<button type="button" class="borderless-button" id="login-button" onclick="openLogin()" title="Log in">
 					<img class="icon" src="icons/im-user.svg">
 					<div class="label">
 						Log in
