--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -53,7 +53,13 @@
 							About
 						</div>
 						<div class="tab" id="tab2" onclick='switchTab(2)'>
+							Components
+						</div>
+						<div class="tab" id="tab3" onclick='switchTab(3)'>
 							Authors
+						</div>
+						<div class="tab" id="tab4" onclick='switchTab(4)'>
+							Thanks To
 						</div>
 					</div>
 					<div class="tab-body active" id="tab-body1">
@@ -76,6 +82,47 @@
 						This website exists to serve as an accurate retelling of the Great Avocado War of '24. As for who won the war? You will have to play to find out.
 					</div>
 					<div class="tab-body" id="tab-body2">
+						<b>
+							 Bootstrap
+						</b>
+						<br>
+						<i>
+							Version 5.3.3
+						</i>
+						<br>
+						<button type="button" class="borderless-button" title="Visit component's homepage&#013;https://getbootstrap.com">
+							<a href="https://getbootstrap.com" target="_blank">
+								<img class="icon" src="icons/globe.svg">
+							</a>
+						</button>
+						<b>
+							 Django
+						</b>
+						<br>
+						<i>
+							Version 5.0.6
+						</i>
+						<br>
+						<button type="button" class="borderless-button" title="Visit component's homepage&#013;https://www.djangoproject.com">
+							<a href="https://www.djangoproject.com" target="_blank">
+								<img class="icon" src="icons/globe.svg">
+							</a>
+						</button>
+						<b>
+							 Three.js
+						</b>
+						<br>
+						<i>
+							Version r165
+						</i>
+						<br>
+						<button type="button" class="borderless-button" title="Visit component's homepage&#013;https://threejs.org">
+							<a href="https://threejs.org" target="_blank">
+								<img class="icon" src="icons/globe.svg">
+							</a>
+						</button>
+					</div>
+					<div class="tab-body" id="tab-body3">
 						<b>
 							Bruno Pierre Bouchard
 						</b>
@@ -141,6 +188,9 @@
 								<img class="icon" src="icons/globe.svg">
 							</a>
 						</button>
+					</div>
+					<div class="tab-body" id="tab-body4">
+						TBA?
 					</div>
 				</div>
 				<div class="row">
