--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -8,6 +8,9 @@
 			<script src="ft_transcendence.js">
 			</script>
 			<link rel="stylesheet" href="ft_transcendence.css" />
+			<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+			<script src="bootstrap/js/bootstrap.js">
+			</script>
 		</head>
 		<div class="toolbar" id="toolbar">
 			<div class="toolbar-content">
@@ -63,7 +66,7 @@
 						</div>
 					</div>
 					<div class="tab-body active" id="tab-body1">
-						<div class="row">
+						<div class="row_t">
 							<img class="inline-img" src="icons/openart-image_yBIl3nIg_1717776713014_raw.jpg">
 						</div>
 						<br>
@@ -105,6 +108,19 @@
 						<br>
 						<button type="button" class="borderless-button" title="Visit component's homepage&#013;https://www.djangoproject.com">
 							<a href="https://www.djangoproject.com" target="_blank">
+								<img class="icon" src="icons/globe.svg">
+							</a>
+						</button>
+						<b>
+							 PostgreSQL
+						</b>
+						<br>
+						<i>
+							Version 16.3
+						</i>
+						<br>
+						<button type="button" class="borderless-button" title="Visit component's homepage&#013;https://www.postgresql.org">
+							<a href="https://www.postgresql.org" target="_blank">
 								<img class="icon" src="icons/globe.svg">
 							</a>
 						</button>
@@ -193,7 +209,7 @@
 						TBA?
 					</div>
 				</div>
-				<div class="row">
+				<div class="row_t">
 					<div class="spacer">
 					</div>
 					<button type="button" class="button" onclick="openHome()">
@@ -211,8 +227,8 @@
 					Log in
 				</h2>
 				<div class="frame">
-					<div class="row">
-						<div class="column">
+					<div class="row_t">
+						<div class="column_t">
 							<div class="label">
 								Username:
 							</div>
@@ -220,13 +236,13 @@
 								Password:
 							</div>
 						</div>
-						<div class="column">
+						<div class="column_t">
 							<input type="text">
 							<input type="password">
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row_t">
 					<button type="button" class="button" onclick="openSignup()">
 						<img class="icon" src="icons/list-add-user.svg">
 						<div class="label">
@@ -256,8 +272,8 @@
 					Sign up
 				</h2>
 				<div class="frame">
-					<div class="row">
-						<div class="column">
+					<div class="row_t">
+						<div class="column_t">
 							<div class="label">
 								Username:
 							</div>
@@ -268,14 +284,14 @@
 								Confirm password:
 							</div>
 						</div>
-						<div class="column">
+						<div class="column_t">
 							<input type="text">
 							<input type="password">
 							<input type="password">
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row_t">
 					<div class="spacer">
 					</div>
 					<button type="button" class="button" onclick="openLogin()">
