--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -5,14 +5,16 @@
 	</title>
 	<body>
 		<head>
-			<script src="ft_transcendence.js">
-			</script>
 			<link rel="stylesheet" href="ft_transcendence.css" />
 			<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+			<script src="ft_transcendence.js">
+			</script>
+			<script src="popper/popper.min.js">
+			</script>
 			<script src="bootstrap/js/bootstrap.js">
 			</script>
 		</head>
-		<div class="toolbar" id="toolbar">
+<!--	<div class="toolbar" id="toolbar">
 			<div class="toolbar-content">
 				<button type="button" class="borderless-button" id="home-button" onclick="openHome()" style="border-color: #bbbcbd; background-color: #c5c9cb" title="Home">
 					<img class="icon" src="icons/go-home.svg">
@@ -41,7 +43,36 @@
 					</div>
 				</button>
 			</div>
-		</div>
+		</div>-->
+		<nav class="navbar navbar-expand-lg bg-body-tertiary" id="toolbar">
+			<div class="container-fluid">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon">
+					</span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item" id="home-button" onclick="openHome()" title="Home">
+							<a class="nav-link active" aria-current="page" href="#">
+								Home
+							</a>
+						</li>
+						<li class="nav-item" id="about-button" onclick="openAbout()" title="About">
+							<a class="nav-link active" aria-current="page" href="#">
+								About
+							</a>
+						</li>
+					</ul>
+					<ul class="navbar-nav mb-2 mb-lg-0">
+						<li class="nav-item" id="login-button" onclick="openLogin()" title="Log in">
+							<a class="nav-link active" aria-current="page" href="#">
+								Log in
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 		<div class="content" id="content" onclick="openHome()">
 			<img class="content-body" id="content-body" src="icons/placeholder.png">
 		</div>
