add disabled button state

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -267,7 +267,7 @@
 							Cancel
 						</div>
 					</button>
-					<button type="button" class="button">
+					<button type="button" class="button inactive">
 						<img class="icon" src="icons/dialog-ok-apply.svg">
 						<div class="label">
 							OK
@@ -310,7 +310,7 @@
 							Cancel
 						</div>
 					</button>
-					<button type="button" class="button">
+					<button type="button" class="button inactive">
 						<img class="icon" src="icons/dialog-ok-apply.svg">
 						<div class="label">
 							OK
