--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -60,22 +60,25 @@
 				<h2 class="popup-label">
 					The Great Avocado War of '24
 				</h2>
-				<div class="tabs">
-					<div class="tab-row">
-						<div class="tab active" id="tab1" onclick='switchTab(1)'>
+				<ul class="nav nav-tabs" id="myTab" role="tablist">
+					<li class="nav-item" role="presentation">
+						<button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">
 							About
-						</div>
-						<div class="tab" id="tab2" onclick='switchTab(2)'>
+						</button>
+					</li>
+					<li class="nav-item" role="presentation">
+						<button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">
 							Components
-						</div>
-						<div class="tab" id="tab3" onclick='switchTab(3)'>
+						</button>
+					</li>
+					<li class="nav-item" role="presentation">
+						<button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">
 							Authors
-						</div>
-						<div class="tab" id="tab4" onclick='switchTab(4)'>
-							Thanks To
-						</div>
-					</div>
-					<div class="tab-body active" id="tab-body1">
+						</button>
+					</li>
+				</ul>
+				<div class="tab-content" id="myTabContent">
+					<div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
 						<div class="row_t">
 							<img class="inline-img" src="icons/openart-image_yBIl3nIg_1717776713014_raw.jpg">
 						</div>
@@ -94,7 +97,7 @@
 						<br>
 						This website exists to serve as an accurate retelling of the Great Avocado War of '24. As for who won the war? You will have to play to find out.
 					</div>
-					<div class="tab-body" id="tab-body2">
+					<div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
 						<b>
 							 Bootstrap
 						</b>
@@ -148,7 +151,7 @@
 							</a>
 						</button>
 					</div>
-					<div class="tab-body" id="tab-body3">
+					<div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
 						<b>
 							Bruno Pierre Bouchard
 						</b>
@@ -214,9 +217,6 @@
 								<img class="icon" src="icons/globe.svg">
 							</a>
 						</button>
-					</div>
-					<div class="tab-body" id="tab-body4">
-						TBA?
 					</div>
 				</div>
 				<div class="row_t">
