--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -3,7 +3,7 @@
 	<title>
 		The Great Avocado War of '24
 	</title>
-	<body>
+	<body id="body">
 		<head>
 			<link rel="stylesheet" href="ft_transcendence.css" />
 			<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
@@ -14,36 +14,32 @@
 			<script src="bootstrap/js/bootstrap.js">
 			</script>
 		</head>
-		<nav class="navbar navbar-expand-lg bg-body-tertiary" id="toolbar">
+		<nav class="navbar border-bottom navbar-expand-lg bg-body-tertiary" id="toolbar">
 			<div class="container-fluid">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon">
-					</span>
-				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item" id="home-button" onclick="openHome()" title="Home">
-							<img class="icon" src="icons/go-home.svg">
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item border rounded d-flex text-nowrap" id="home-button" onclick="openHome()" title="Home">
+							<img class="icon" height="22" src="icons/go-home.svg">
 							<a class="nav-link active" aria-current="page">
 								Home
 							</a>
 						</li>
-						<li class="nav-item" title="Leaderboard">
-							<img class="icon" src="icons/games-highscores.svg">
+						<li class="nav-item border rounded d-flex text-nowrap" title="Leaderboard">
+							<img class="icon" height="22" src="icons/games-highscores.svg">
 							<a class="nav-link active" aria-current="page">
 								Leaderboard
 							</a>
 						</li>
-						<li class="nav-item" id="about-button" onclick="openAbout()" title="About">
-							<img class="icon" src="icons/help-about.svg">
+						<li class="nav-item border rounded d-flex text-nowrap" id="about-button" onclick="openAbout()" title="About">
+							<img class="icon" height="22" src="icons/help-about.svg">
 							<a class="nav-link active" aria-current="page">
 								About
 							</a>
 						</li>
 					</ul>
-					<ul class="navbar-nav mb-2 mb-lg-0">
-						<li class="nav-item" id="login-button" onclick="openLogin()" title="Log in">
-							<img class="icon" src="icons/im-user.svg">
+					<ul class="navbar-nav">
+						<li class="nav-item border rounded d-flex text-nowrap" id="login-button" onclick="openLogin()" title="Log in">
+							<img class="icon" height="22" src="icons/im-user.svg">
 							<a class="nav-link active" aria-current="page">
 								Log in
 							</a>
@@ -62,23 +58,23 @@
 				</h2>
 				<ul class="nav nav-tabs" id="myTab" role="tablist">
 					<li class="nav-item" role="presentation">
-						<button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">
+						<button class="nav-link active" id="about-tab" data-bs-toggle="tab" data-bs-target="#about-tab-pane" type="button" role="tab" aria-controls="about-tab-pane" aria-selected="true">
 							About
 						</button>
 					</li>
 					<li class="nav-item" role="presentation">
-						<button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">
+						<button class="nav-link" id="components-tab" data-bs-toggle="tab" data-bs-target="#components-tab-pane" type="button" role="tab" aria-controls="components-tab-pane" aria-selected="false">
 							Components
 						</button>
 					</li>
 					<li class="nav-item" role="presentation">
-						<button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">
+						<button class="nav-link" id="authors-tab" data-bs-toggle="tab" data-bs-target="#authors-tab-pane" type="button" role="tab" aria-controls="authors-tab-pane" aria-selected="false">
 							Authors
 						</button>
 					</li>
 				</ul>
 				<div class="tab-content" id="myTabContent">
-					<div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+					<div class="tab-pane fade show active" id="about-tab-pane" role="tabpanel" aria-labelledby="about-tab" tabindex="0">
 						<div class="row_t">
 							<img class="inline-img" src="icons/openart-image_yBIl3nIg_1717776713014_raw.jpg">
 						</div>
@@ -97,7 +93,7 @@
 						<br>
 						This website exists to serve as an accurate retelling of the Great Avocado War of '24. As for who won the war? You will have to play to find out.
 					</div>
-					<div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+					<div class="tab-pane fade" id="components-tab-pane" role="tabpanel" aria-labelledby="components-tab" tabindex="0">
 						<b>
 							 Bootstrap
 						</b>
@@ -108,7 +104,7 @@
 						<br>
 						<button type="button" class="borderless-button" title="Visit component's homepage&#013;https://getbootstrap.com">
 							<a href="https://getbootstrap.com" target="_blank">
-								<img class="icon" src="icons/globe.svg">
+								<img class="icon" height="22" src="icons/globe.svg">
 							</a>
 						</button>
 						<b>
@@ -121,7 +117,7 @@
 						<br>
 						<button type="button" class="borderless-button" title="Visit component's homepage&#013;https://www.djangoproject.com">
 							<a href="https://www.djangoproject.com" target="_blank">
-								<img class="icon" src="icons/globe.svg">
+								<img class="icon" height="22" src="icons/globe.svg">
 							</a>
 						</button>
 						<b>
@@ -134,7 +130,7 @@
 						<br>
 						<button type="button" class="borderless-button" title="Visit component's homepage&#013;https://www.postgresql.org">
 							<a href="https://www.postgresql.org" target="_blank">
-								<img class="icon" src="icons/globe.svg">
+								<img class="icon" height="22" src="icons/globe.svg">
 							</a>
 						</button>
 						<b>
@@ -147,11 +143,11 @@
 						<br>
 						<button type="button" class="borderless-button" title="Visit component's homepage&#013;https://threejs.org">
 							<a href="https://threejs.org" target="_blank">
-								<img class="icon" src="icons/globe.svg">
+								<img class="icon" height="22" src="icons/globe.svg">
 							</a>
 						</button>
 					</div>
-					<div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+					<div class="tab-pane fade" id="authors-tab-pane" role="tabpanel" aria-labelledby="authors-tab" tabindex="0">
 						<b>
 							Bruno Pierre Bouchard
 						</b>
@@ -162,7 +158,7 @@
 						<br>
 						<button type="button" class="borderless-button" title="Visit contributor's homepage&#013;https://github.com/Nyonyx">
 							<a href="https://github.com/Nyonyx" target="_blank">
-								<img class="icon" src="icons/globe.svg">
+								<img class="icon" height="22" src="icons/globe.svg">
 							</a>
 						</button>
 						<b>
@@ -175,7 +171,7 @@
 						<br>
 						<button type="button" class="borderless-button" title="Visit contributor's homepage&#013;https://github.com/ShroomySquid">
 							<a href="https://github.com/ShroomySquid" target="_blank">
-								<img class="icon" src="icons/globe.svg">
+								<img class="icon" height="22" src="icons/globe.svg">
 							</a>
 						</button>
 						<b>
@@ -188,7 +184,7 @@
 						<br>
 						<button type="button" class="borderless-button" title="Visit contributor's homepage&#013;https://github.com/joeroeg">
 							<a href="https://github.com/joeroeg" target="_blank">
-								<img class="icon" src="icons/globe.svg">
+								<img class="icon" height="22" src="icons/globe.svg">
 							</a>
 						</button>
 						<b>
@@ -201,7 +197,7 @@
 						<br>
 						<button type="button" class="borderless-button" title="Visit contributor's homepage&#013;https://github.com/lcouturi">
 							<a href="https://github.com/lcouturi" target="_blank">
-								<img class="icon" src="icons/globe.svg">
+								<img class="icon" height="22" src="icons/globe.svg">
 							</a>
 						</button>
 						<b>
@@ -214,7 +210,7 @@
 						<br>
 						<button type="button" class="borderless-button" title="Visit contributor's homepage&#013;https://github.com/pierreolivierpaquet">
 							<a href="https://github.com/pierreolivierpaquet" target="_blank">
-								<img class="icon" src="icons/globe.svg">
+								<img class="icon" height="22" src="icons/globe.svg">
 							</a>
 						</button>
 					</div>
@@ -223,7 +219,7 @@
 					<div class="spacer">
 					</div>
 					<button type="button" class="button" onclick="openHome()">
-						<img class="icon" src="icons/window-close.svg">
+						<img class="icon" height="22" src="icons/window-close.svg">
 						<div class="label">
 							Close
 						</div>
@@ -254,7 +250,7 @@
 				</div>
 				<div class="row_t">
 					<button type="button" class="button" onclick="openSignup()">
-						<img class="icon" src="icons/list-add-user.svg">
+						<img class="icon" height="22" src="icons/list-add-user.svg">
 						<div class="label">
 							Sign up
 						</div>
@@ -262,13 +258,13 @@
 					<div class="spacer">
 					</div>
 					<button type="button" class="button" onclick="openHome()">
-						<img class="icon" src="icons/dialog-cancel.svg">
+						<img class="icon" height="22" src="icons/dialog-cancel.svg">
 						<div class="label">
 							Cancel
 						</div>
 					</button>
 					<button type="button" class="button inactive">
-						<img class="icon" src="icons/dialog-ok-apply.svg">
+						<img class="icon" height="22" src="icons/dialog-ok-apply.svg">
 						<div class="label">
 							OK
 						</div>
@@ -305,13 +301,13 @@
 					<div class="spacer">
 					</div>
 					<button type="button" class="button" onclick="openLogin()">
-						<img class="icon" src="icons/dialog-cancel.svg">
+						<img class="icon" height="22" src="icons/dialog-cancel.svg">
 						<div class="label">
 							Cancel
 						</div>
 					</button>
 					<button type="button" class="button inactive">
-						<img class="icon" src="icons/dialog-ok-apply.svg">
+						<img class="icon" height="22" src="icons/dialog-ok-apply.svg">
 						<div class="label">
 							OK
 						</div>
